[package]
name = "VLSync"
version = "0.1.0"
authors = ["Noorquacker <noorquacker@nqind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libVLC
vlc-rs = "0.3"
libc = "0.2"
# Qt
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
# API communication - this is a tokio household
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.130", features = ["derive"]}
# literally just client id lmao
base64 = "0.13.0"
rand = "0.8.4"

[build-dependencies]
qt_ritual_build = "0.5.0"
